# cocoa

./: .gitignore  LICENSE  README.md  cabal.project  cocoa.cabal
hello-cocoa/: Main.hs
src/Cocoa/AppKit/: NSApplication.hs  NSApplicationActivationPolicy.hs  NSMenu.hs  NSMenuItem.hs
src/Cocoa/AppKit/NSApplication/: Msg.hs  Type.hs
src/Cocoa/AppKit/NSMenu/: Msg.hs  Type.hs
src/Cocoa/AppKit/NSMenuItem/: Msg.hs  Type.hs
src/Cocoa/Foundation/: NSString.hs  NSStringEncoding.hs
src/Cocoa/Foundation/NSString/: Msg.hs  Type.hs
tests/arc-instr-test/: Main.hs
tests/instr/: Main.hs
