name:                cocoa
version:             0.1.0.0
synopsis:            Haskell Bindings to the Cocoa API
description:         Haskell Bindings to the Cocoa API
homepage:            https://github.com/TravisWhitaker/cocoa
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2018
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Cocoa.Foundation.NSString
                       Cocoa.Foundation.NSStringEncoding
  other-modules:       Cocoa.Foundation.NSString.Type
                       Cocoa.Foundation.NSString.Msg
  -- other-extensions:
  build-depends:       base >=4.10 && <4.11
                     , bytestring
                     , objc-runtime
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
