name:                cocoa
version:             0.1.0.0
synopsis:            Haskell Bindings to the Cocoa API
description:         Haskell Bindings to the Cocoa API
homepage:            https://github.com/TravisWhitaker/cocoa
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2018
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Cocoa.AppKit.NSApplication
                       Cocoa.AppKit.NSApplication.Type
                       Cocoa.AppKit.NSApplication.Msg
                       Cocoa.AppKit.NSApplicationActivationPolicy
                       Cocoa.AppKit.NSMenu
                       Cocoa.AppKit.NSMenu.Type
                       Cocoa.AppKit.NSMenu.Msg
                       Cocoa.AppKit.NSMenuItem
                       Cocoa.AppKit.NSMenuItem.Type
                       Cocoa.AppKit.NSMenuItem.Msg
                       Cocoa.Foundation.NSString
                       Cocoa.Foundation.NSString.Type
                       Cocoa.Foundation.NSString.Msg
                       Cocoa.Foundation.NSStringEncoding
  -- other-modules:       Cocoa.Foundation.NSString.Type
  --                      Cocoa.Foundation.NSString.Msg
  --  other-extensions:
  build-depends:       base >=4.10 && <5
                     , bytestring
                     , objc-runtime
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  extra-libraries:     objc
  frameworks:          AppKit
                       Foundation

executable HelloCocoa
  hs-source-dirs:   hello-cocoa
  main-is:          Main.hs
  build-depends:    base
                  , cocoa
                  , objc-runtime
                  , text
  extra-libraries:  objc
  frameworks:       AppKit
                    Foundation
  ghc-options:      -dynamic -threaded

executable arc-instr-test
  hs-source-dirs:   tests/arc-instr-test
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:    base
                  , cocoa
                  , objc-runtime
                  , text
  extra-libraries:  objc
  frameworks:       AppKit
                    Foundation
  ghc-options:      -dynamic -threaded
